<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/gridLayout"
        android:rowCount="5"
        android:columnCount="5"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but1"
            android:id="@+id/button"
            android:layout_row="1"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but2"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but3"
            android:id="@+id/button3"
            android:layout_row="1"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but4"
            android:id="@+id/button4"
            android:layout_row="1"
            android:layout_column="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but5"
            android:id="@+id/button5"
            android:layout_row="2"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but6"
            android:id="@+id/button6"
            android:layout_row="2"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but7"
            android:id="@+id/button7"
            android:layout_row="2"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but8"
            android:id="@+id/button8"
            android:layout_row="2"
            android:layout_column="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but9"
            android:id="@+id/button9"
            android:layout_row="3"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but10"
            android:id="@+id/button10"
            android:layout_row="3"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but11"
            android:id="@+id/button11"
            android:layout_row="3"
            android:layout_column="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but12"
            android:id="@+id/button12"
            android:layout_row="3"
            android:layout_column="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but13"
            android:id="@+id/button13"
            android:layout_row="4"
            android:layout_column="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/but14"
            android:id="@+id/button14"
            android:layout_row="4"
            android:layout_column="4" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView"
        android:layout_above="@+id/gridLayout"
        android:layout_alignParentLeft="true"
        android:ems="10"/>
</RelativeLayout>
